ajout vcam dans fichier html

--- a/style.css
+++ b/style.css
@@ -8,25 +8,7 @@ header {
 body {
     background-color: rgb(145, 163, 145);
 }
-main {
-    margin-top: 50px;
-}
-footer {
-    background-color: #cc7777;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.navbar {
-    background-color: rgba(0, 0, 0, 0.897);
-}
-.navbar a {
-    background: linear-gradient(to right, #de8621, #8f5bfe);
-    -webkit-text-fill-color: transparent;
-    font-size: 30px;
-}
-.navbar i {
-    background: linear-gradient(to right, #de8621, #8f5bfe);
-    -webkit-text-fill-color: transparent;
-    margin-right: 10px;
-
+img {
+    width: 200px;
+    height: 200px;
 }
