--- a/front/style.css
+++ b/front/style.css
@@ -1,73 +1,10 @@
-/*.container {
-    width: 100%;
-    max-width: 1400px;
-    margin: auto;
-    text-align: center;
-    background-color: #f3e9f1;
-    font-family: "Open Sans", sans-serif;
-  }
-  body {
-    margin: 0;
-  }
-  .contenu {
-    width: 100%;
-  }
-  
-  .choixOptions {
-    width: 200px;
-    margin: auto;
-  }
-  .choixObjectifs {
-    margin-bottom: 80px;
-  }
-  header {
-    font-family: "roboto", sans-serif;
-    margin-bottom: 30px;
-  }
- 
-  nav ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row-reverse;
-  }
-  nav li {
-    margin-right: 15px;
-  } 
-  h1 {
-    font-family: "Roboto", sans-serif;
-    padding-top: 20px;
-  }
-  h2,
-  p {
-    margin: 0;
-  }
-  h2 {
-    font-size: 1.6em;
-  }
-  .imageCamera,
-.imageProduit {
-  box-shadow: 5px 5px 3px black;
-}
-.produitCamera {
-  margin-bottom: 80px;
-}
-.produit {
-  margin: auto;
-}
-libelle-nom {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: left;
-  margin-left: 10px;
-}*/
 
 .container {
   width: 100%;
   max-width: 1400px;
   margin: auto;
   text-align: center;
-  background-color: #f3e9f1;
+  background-color: whitesmoke;
   font-family: "Open Sans", sans-serif;
 }
 body {
@@ -172,7 +109,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: left;
+  text-align: center;
   margin-left: 10px;
 }
 .imagePanier {
@@ -188,10 +125,10 @@ h2 {
 .prixTotal {
   text-align: left;
 }
-#prix-total-final {
+#prix-total {
   font-size: 1.5rem;
-  text-align: left;
-  background-color: #e3ccdf;
+  text-align: center;
+  background-color: coral;
   font-weight: bold;
   width: 180px;
   margin-left: 210px;
