modification fichier js

--- a/front/style.css
+++ b/front/style.css
@@ -139,6 +139,7 @@ h2 {
   width: 120px;
   margin-top: 20px;
   margin-bottom: 10px;
+  background-color: aqua;
 }
 .recapitulatif {
   text-align: left;
