--- a/front/style.css
+++ b/front/style.css
@@ -105,7 +105,7 @@ article a:hover {
 .imageCamera,
 .imageProduit {
   box-shadow: 5px 5px 3px black;
-  width: 550px;
+  width: 55n0px;
 }
 label {
   display: flex;
@@ -134,6 +134,7 @@ label {
 h1 {
   font-family: "Roboto", sans-serif;
   padding-top: 20px;
+  font-size: 2em;
 }
 h2,
 p {
